// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v2alpha;

import "google/api/resource.proto";
import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.reporting.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "ReportScheduleIterationProto";

// Resource representing the creation of a single `Report` based on a schedule.
message ReportScheduleIteration {
  option (google.api.resource) = {
    type: "reporting.halo-cmm.org/ReportScheduleIteration"
    pattern: "measurementConsumers/{measurement_consumer}/reportSchedules/{report_schedule}/reportScheduleIterations/{report_schedule_iteration}"
  };

  // Resource name.
  string name = 1;

  enum State {
    // Default value used if the state is omitted.
    STATE_UNSPECIFIED = 0;
    // Data is not yet available for `Report` creation.
    DATA_NOT_AVAILABLE = 1;
    // Grpc call failed when attempting `Report` creation.
    GRPC_FAILURE = 2;
    // `Report` was successfully created. Terminal state.
    REPORT_CREATED = 3;
  }
  State state = 2;

  // Only incremented when state transitions to `GRPC_FAILURE` or
  // `REPORT_CREATED`.
  int32 num_attempts = 3;

  // Only set when state is `REPORT_CREATED`.
  string report_name = 4;

  // Scheduled time for `Report` creation for this iteration.
  google.protobuf.Timestamp report_creation_time = 5;
}